[package]
name = "http_auth_proxy"
version = "1.0.0"
authors = ["Mathis <mk@thepeaklab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
base64 = "0.11.0"
hyper-tls = "0.4.1"
